# gallery

./: .gitignore  README.md  meson.build
html/: template.html
src/: gly.c  gly.h  img.c  img.h  main.c  parser.c  parser.h  writer.c  writer.h
tests/: meson.build  test.c
